--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="../static/js/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="../static/js/background-image.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-
+<!-- <script src="../static/js/conf.js"></script> -->
 {% block head %}{% endblock %}
 <!-- Nivo Slider -->
     <script type="text/javascript">
@@ -36,7 +36,7 @@
         var background = new Easy_Background({
           background_color: "none",
           pattern: "../static/img/patterns/pattern-1.png",
-          autoplay: "true",
+          autoplay: "False",
           autoplayTime: 5,
 
           images:["../static/img/fullscreen/screen1.jpg"],
@@ -53,7 +53,7 @@
                  time:  [],
                  delay: 0 }
         });
-        $('body').click(background.next);
+        // $('body').click(background.next);
       });
     </script>
 
